tests/baselines/reference/decoratorWithOrWithoutComma.errors.txt
tests/cases/compiler/decoratorWithOrWithoutComma.ts(11,17): error TS1143: Comma not permitted here.


==== tests/cases/compiler/decoratorWithOrWithoutComma.ts (1 errors) ====
    function decorated(): Function {
        return (target: any): any => target;
    }
    
    class Member { }
    
    class Example {
        @decorated()
        public readonly member: Member;
    
        @decorated(),
                    
!!! error TS1143: Comma not permitted here.
        public readonly memberComma: Member;
    }
    